Added images for each show

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Anime Schedule</title>
     </head>
     <body>
-        <ul id="airing-list">Currently airing</ul>
+        <ul id="airing-list"></ul>
         <script src="script.js"></script>
     </body>
 </html>
