Adds button to refresh current time

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Anime Schedule</title>
     </head>
     <body>
+        <button id="refresh-btn">Refresh</button>
         <ul id="airing-list"></ul>
         <script src="script.js"></script>
     </body>
